Issue Resolved : 575,580 Test cases added/updated : testApplyTimeOfFirstRepaymentFee,testApplyPeriodicFee
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@10541 a8845c50-7012-0410-95d3-8e1449b9b1e4